fix: set instead of list